--- a/MyShop/MyShop.WebUI/Web.config
+++ b/MyShop/MyShop.WebUI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;user Id= ;Password=-->
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=MyShop;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=MyShop;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
